--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <input type="text" class="popup__input-item popup__input-name">
               <input type="text" class="popup__input-item popup__input-status">
             </div>
-          <input type="submit" class="popup__save-button" value="Сохранить"></input>
+          <input type="submit" class="popup__save-button" value="Сохранить">
           <button class="popup__close-button"></button>
         </form>
       </section>
