--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
   <title>Mesto</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body class="JS-scroll">
+<body>
   <div class="page">
     <header class="header">
-      <img src="./images/logo.svg" alt="logo" class="logo">
+      <img src="./images/logo.svg" alt="логотип" class="logo">
     </header>
     <main class="content">
       <section class="profile">
-        
         <div class="profile__info">
           <div class="profile__avatar"></div>
           <div class="profile__column">
-            <h2 class="profile__name">Пушкин Александр Сергеевич</h2><button class="profile__edit-button"></button>
+            <h1 class="profile__name">Пушкин Александр Сергеевич</h1><button class="profile__edit-button"></button>
             <p class="profile__status">Писатель</p>
           </div>
         </div>
@@ -71,10 +70,10 @@
         <form class="popup__container" action="#">
             <h2 class="popup__title">Редактировать профиль</h2>
             <div class="popup__input">
-              <input type="text" class="popup__input-item popup__input-name">
-              <input type="text" class="popup__input-item popup__input-status">
+              <input type="text" class="popup__input-item popup__input-item_name_change">
+              <input type="text" class="popup__input-item popup__input-item_status_change">
             </div>
-          <input type="submit" class="popup__save-button" value="Сохранить">
+          <button type="submit" class="popup__save-button" value="Сохранить">Сохранить</button>
           <button class="popup__close-button"></button>
         </form>
       </section>
