--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         <div class="profile__info">
           <div class="profile__avatar"></div>
           <div class="profile__column">
-            <h1 class="profile__name">Пушкин Александр Сергеевич</h1><button class="profile__edit-button"></button>
+            <h1 class="profile__name">Пушкин Александр Сергеевич</h1>
+            <button class="profile__edit-button"></button>
             <p class="profile__status">Писатель</p>
           </div>
         </div>
-        <button class="profile__add-button">+</button>
+        <button class="profile__add-button"></button>
       </section>
       <section class="cards">
         <div class="card">
@@ -74,7 +75,7 @@
               <input type="text" class="popup__input-item popup__input-item_status_change">
             </div>
           <button type="submit" class="popup__save-button" value="Сохранить">Сохранить</button>
-          <button class="popup__close-button"></button>
+          <button type="reset" class="popup__close-button"></button>
         </form>
       </section>
     </main>
