--- a/index.html
+++ b/index.html
@@ -14,74 +14,82 @@
     <main class="content">
       <section class="profile">
         <div class="profile__info">
-          <div class="profile__avatar"></div>
+          <div class="profile__avatar" style = "background-image: url(../../../images/avatar.png);"></div>
           <div class="profile__column">
             <h1 class="profile__name">Пушкин Александр Сергеевич</h1>
-            <button class="profile__edit-button"></button>
+            <button type="button" class="profile__edit-button" aria-label="Редактировать профиль"></button>
             <p class="profile__status">Писатель</p>
           </div>
         </div>
-        <button class="profile__add-button"></button>
+        <button type="button" class="profile__add-button" aria-label="Добавить"></button>
       </section>
-      <section class="cards">
-        <div class="card">
-          <img src="./images/Arbat.jpg" alt="арбат" class="card__image">
-          <div class="card__column">
-            <h2 class="card__title">Арбат</h2>
-            <button class="card__like"></button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="./images/boldinoBig.jpg" alt="болдино" class="card__image">
-          <div class="card__column">
-            <h2 class="card__title">Болдино</h2>
-            <button class="card__like"></button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="./images/mikhailovskoeBig.jpg" alt="михайловское" class="card__image">
-          <div class="card__column">
-            <h2 class="card__title">Михайловское село</h2>
-            <button class="card__like"></button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="./images/MoykaBig.jpg" alt="дом на мойке" class="card__image">
-          <div class="card__column">
-            <h2 class="card__title">Дом на Мойке</h2>
-            <button class="card__like"></button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="./images/tsarckoeseloBig.jpg" alt="царское село" class="card__image">
-          <div class="card__column">
-            <h2 class="card__title">Царское село</h2>
-            <button class="card__like"></button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="./images/vyazemBig.jpg" alt="вязьма" class="card__image">
-          <div class="card__column">
-            <h2 class="card__title">Вязьма</h2>
-            <button class="card__like"></button>
-          </div>
-        </div>
-      </section>
-      <section class="popup">
-        <form class="popup__container" action="#">
-            <h2 class="popup__title">Редактировать профиль</h2>
-            <div class="popup__input">
-              <input type="text" class="popup__input-item popup__input-item_name_change">
-              <input type="text" class="popup__input-item popup__input-item_status_change">
+      <section class="wrapper-cards">
+        <ul class="cards">
+          <li class="card">
+            <!-- <img src="./images/Arbat.jpg" alt="арбат" class="card__image"> -->
+            <div class="card__image" style="background-image: url(./images/arbat.jpg);"></div>
+            <div class="card__column">
+              <h2 class="card__title">Арбат</h2>
+              <button type="button" class="card__like" aria-label="Понравилось"></button>
             </div>
-          <button type="submit" class="popup__save-button" value="Сохранить">Сохранить</button>
-          <button type="reset" class="popup__close-button"></button>
-        </form>
+          </li>
+          <li class="card">
+            <!-- <img src="./images/boldinoBig.jpg" alt="болдино" class="card__image"> -->
+            <div class="card__image" style="background-image: url(./images/boldinoBig.jpg);"></div>
+            <div class="card__column">
+              <h2 class="card__title">Болдино</h2>
+              <button type="button" class="card__like" aria-label="Понравилось"></button>
+            </div>
+          </li>
+          <li class="card">
+            <!-- <img src="./images/mikhailovskoeBig.jpg" alt="михайловское" class="card__image"> -->
+            <div class="card__image" style="background-image: url(./images/mikhailovskoeBig.jpg);"></div>
+            <div class="card__column">
+              <h2 class="card__title">Михайловское село</h2>
+              <button type="button" class="card__like" aria-label="Понравилось"></button>
+            </div>
+          </li>
+          <li class="card">
+            <!-- <img src="./images/MoykaBig.jpg" alt="дом на мойке" class="card__image"> -->
+            <div class="card__image" style="background-image: url(./images/moykaBig.jpg);"></div>
+            <div class="card__column">
+              <h2 class="card__title">Дом на Мойке</h2>
+              <button type="button" class="card__like" aria-label="Понравилось"></button>
+            </div>
+          </li>
+          <li class="card">
+            <!-- <img src="./images/tsarckoeseloBig.jpg" alt="царское село" class="card__image"> -->
+            <div class="card__image" style="background-image: url(./images/tsarckoeseloBig.jpg);"></div>
+            <div class="card__column">
+              <h2 class="card__title">Царское село</h2>
+              <button type="button" class="card__like" aria-label="Понравилось"></button>
+            </div>
+          </li>
+          <li class="card">
+            <!-- <img src="./images/vyazemBig.jpg" alt="вязьма" class="card__image"> -->
+            <div class="card__image" style="background-image: url(./images/vyazemBig.jpg);"></div>
+            <div class="card__column">
+              <h2 class="card__title">Вязьма</h2>
+              <button type="button" class="card__like" aria-label="Понравилось"></button>
+            </div>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
       <p class="footer__text">&copy; 2020 Mesto Russia</p>
     </footer>
+  </div>
+  <div class="popup">
+    <form class="popup__container" action="#" name="popupForm">
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <fieldset class="popup__input">
+          <input type="text" name="nameChange" required placeholder="Ваше имя" class="popup__input-item popup__input-item_name_change">
+          <input type="text" name="statusChange" required placeholder="Ваше занятие" class="popup__input-item popup__input-item_status_change">
+        </fieldset>
+      <button type="submit" class="popup__save-button" value="Сохранить">Сохранить</button>
+      <button type="reset" class="popup__close-button" aria-label="Закрыть"></button>
+    </form>
   </div>
   <script src="./scripts/index.js" defer></script>
 </body>
