--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="content">
       <section class="profile">
         <div class="profile__info">
-          <div class="profile__avatar" style = "background-image: url(../../../images/avatar.png);"></div>
+          <div class="profile__avatar" style = "background-image: url(./images/avatar.png);"></div>
           <div class="profile__column">
             <h1 class="profile__name">Пушкин Александр Сергеевич</h1>
             <button type="button" class="profile__edit-button" aria-label="Редактировать профиль"></button>
@@ -51,7 +51,7 @@
           </li>
           <li class="card">
             <!-- <img src="./images/MoykaBig.jpg" alt="дом на мойке" class="card__image"> -->
-            <div class="card__image" style="background-image: url(./images/moykaBig.jpg);"></div>
+            <div class="card__image" style="background-image: url(./images/moykabig.jpg);"></div>
             <div class="card__column">
               <h2 class="card__title">Дом на Мойке</h2>
               <button type="button" class="card__like" aria-label="Понравилось"></button>
