--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
+
 <body>
   <div class="page">
     <header class="header">
@@ -14,7 +16,7 @@
     <main class="content">
       <section class="profile">
         <div class="profile__info">
-          <div class="profile__avatar" style = "background-image: url(./images/avatar.png);"></div>
+          <div class="profile__avatar" style="background-image: url(./images/avatar.png);"></div>
           <div class="profile__column">
             <h1 class="profile__name">Пушкин Александр Сергеевич</h1>
             <button type="button" class="profile__edit-button" aria-label="Редактировать профиль"></button>
@@ -76,15 +78,27 @@
   </div>
   <div class="popup">
     <form class="popup__container" action="#" name="popupForm">
-        <h2 class="popup__title">Редактировать профиль</h2>
-        <fieldset class="popup__input">
-          <input type="text" name="nameChange" required placeholder="Ваше имя" class="popup__input-item popup__input-item_change_name">
-          <input type="text" name="statusChange" required placeholder="Ваше занятие" class="popup__input-item popup__input-item_change_status">
-        </fieldset>
+      <h2 class="popup__title">Редактировать профиль</h2>
+      <fieldset class="popup__input">
+        <input type="text" name="nameChange" required placeholder="Ваше имя"
+          class="popup__input-item popup__input-item_change_name">
+        <input type="text" name="statusChange" required placeholder="Ваше занятие"
+          class="popup__input-item popup__input-item_change_status">
+      </fieldset>
       <button type="submit" class="popup__save-button" value="Сохранить">Сохранить</button>
       <button type="reset" class="popup__close-button" aria-label="Закрыть"></button>
     </form>
   </div>
   <script src="./scripts/index.js" defer></script>
+  <template class="template-card">
+    <li class="card">
+      <div class="card__image"></div>
+      <div class="card__column">
+        <h2 class="card__title"></h2>
+        <button type="button" class="card__like" aria-label="Понравилось"></button>
+      </div>
+    </li>
+  </template>
 </body>
+
 </html>
