--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
   </div>
   <div class="popup js__image">
     <div class="popup__wraper">
-      <div class="popup__image"></div>
-      <p class="popup__text">текст</p>
+      <img class="popup__image">
+      <p class="popup__text"></p>
       <button type="reset" class="popup__close-button js__image_close" aria-label="Закрыть"></button>
     </div>
   </div>
