--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
       <button type="reset" class="popup__close-button popup__close-button_image" aria-label="Закрыть"></button>
     </div>
   </div>
-  <script src="./scripts/index.js" defer></script>
+  <script src="./scripts/initialCards.js" defer></script>
   <script src="./scripts/validate.js" defer></script>
+  <script src="./scripts/index.js" defer></script>
   <template class="template-card">
     <li class="card">
       <button type="button" class="card__delete" aria-label="Удалить"></button>
