--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </div>
   <div class="popup popup_image_wrapper">
     <div class="popup__wraper">
-      <img class="popup__image">
+      <img class="popup__image" alt="#">
       <p class="popup__text"></p>
       <button type="reset" class="popup__close-button popup__close-button_image" aria-label="Закрыть"></button>
     </div>
