--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
   </div>
   <div class="popup popup_type_avatar">
     <form class="popup__container popup_type_container" action="#" name="popupForm">
-      <h2 class="popup__title">Новое место</h2>
+      <h2 class="popup__title">Обновить аватар</h2>
       <fieldset class="popup__input">
         <input type="url" name="statusChange" required placeholder="Ссылка на аватар"
           class="popup__input-item popup__input-item_change_image" id="sign-in-url" autocomplete="off" required>
